--- a/references.bib
+++ b/references.bib
@@ -660,6 +660,25 @@
   langid = {english}
 }
 
+@article{bergenGeneralizingRNAVelocity2020,
+  title = {Generalizing {{RNA}} Velocity to Transient Cell States through Dynamical Modeling},
+  author = {Bergen, Volker and Lange, Marius and Peidli, Stefan and Wolf, F. Alexander and Theis, Fabian J.},
+  date = {2020-12},
+  journaltitle = {Nature Biotechnology},
+  volume = {38},
+  pages = {1408--1414},
+  publisher = {{Nature Publishing Group}},
+  issn = {1546-1696},
+  doi = {10.1038/s41587-020-0591-3},
+  url = {https://www.nature.com/articles/s41587-020-0591-3},
+  urldate = {2021-02-22},
+  abstract = {RNA velocity has opened up new ways of studying cellular differentiation in single-cell RNA-sequencing data. It describes the rate of gene expression change for an individual gene at a given time point based on the ratio of its spliced and unspliced messenger RNA (mRNA). However, errors in velocity estimates arise if the central assumptions of a common splicing rate and the observation of the full splicing dynamics with steady-state mRNA levels are violated. Here we present scVelo, a method that overcomes these limitations by solving the full transcriptional dynamics of splicing kinetics using a likelihood-based dynamical model. This generalizes RNA velocity to systems with transient cell states, which are common in development and in response to perturbations. We apply scVelo to disentangling subpopulation kinetics in neurogenesis and pancreatic endocrinogenesis. We infer gene-specific rates of transcription, splicing and degradation, recover each cell’s position in the underlying differentiation processes and detect putative driver genes. scVelo will facilitate the study of lineage decisions and gene regulation.},
+  file = {/Users/mcgaugheyd/Zotero/storage/FZGRNC8W/Bergen et al. - 2020 - Generalizing RNA velocity to transient cell states.pdf;/Users/mcgaugheyd/Zotero/storage/X3NVNKAB/s41587-020-0591-3.html},
+  issue = {12},
+  langid = {english},
+  number = {12}
+}
+
 @article{bergmanDNAMethylationDynamics2013,
   title = {{{DNA}} Methylation Dynamics in Health and Disease},
   author = {Bergman, Yehudit and Cedar, Howard},
@@ -4204,6 +4223,24 @@
   number = {7}
 }
 
+@article{huntAlteredExpressionKeratin1990,
+  title = {Altered Expression of Keratin and Vimentin in Human Retinal Pigment Epithelial Cells in Vivo and in Vitro},
+  author = {Hunt, R. C. and Davis, A. A.},
+  date = {1990-11},
+  journaltitle = {Journal of Cellular Physiology},
+  shortjournal = {J Cell Physiol},
+  volume = {145},
+  pages = {187--199},
+  issn = {0021-9541},
+  doi = {10.1002/jcp.1041450202},
+  abstract = {Actively proliferating human retinal pigment epithelial (RPE) cells grown in tissue culture possess keratin-containing intermediate filaments that react with a combination of AE1 and AE3 anti-keratin monoclonal antibodies. Antibody reactivity is lost, however, from RPE cells as the cell population ceases to proliferate when it approaches confluence and attains morphological characteristics more similar to those in vivo. In contrast, clone 8.13 anti-keratin antibody stains all cells in the culture at all stages of the growth cycle and cell densities. These findings were reflected in vivo using retinal pigment epithelium taken directly from the eye. Normal non-proliferating RPE cells bound 8.13 antibody to cytoskeletal structures, as judged by indirect immunofluorescence, but did not bind AE1/AE3 antibodies. However, proliferating dedifferentiated RPE cells from the vitreous humor of patients with proliferative vitreoretinopathy possess filaments that bind both AE1/AE3 and 8.13 antibodies. Thus it appears that structures detected by AE1/AE3 antibodies only occur in actively growing RPE cells in vitro and in vivo. Keratins produced by RPE cells were identified using Western blotting. Species with molecular masses of 54 (keratin 7), 52 (keratin 8), 42 (keratin 18), and 40 (keratin 19) kiloDaltons were the most abundant in proliferating cultured cells, but cells isolated directly from the eye were found to lack keratin 7 and 19. Keratin 19 was, however, observed in proliferating RPE cells from some patients with proliferative vitreoretinopathy. The latter findings explain the differential staining observed with AE1/AE3 antibodies in cells in culture and isolated directly from the eye since these antibodies interact primarily with keratin 19 which is absent from non-proliferating RPE cells. In contrast to the presence of keratin-containing intermediate filaments in human RPE cells in vivo, there are apparently no detectable vimentin-containing cytoskeletal structures. However, all RPE cells cultured in vitro develop filaments composed of vimentin which persist in cells that have reached confluence.},
+  eprint = {1700982},
+  eprinttype = {pmid},
+  keywords = {Antibodies; Monoclonal,Colchicine,Cytoskeleton,Fluorescent Antibody Technique,Humans,In Vitro Techniques,Intermediate Filaments,Keratins,Pigment Epithelium of Eye,Retinal Diseases,Vimentin},
+  langid = {english},
+  number = {2}
+}
+
 @article{hwangEfficientGenomeEditing2013,
   title = {Efficient Genome Editing in Zebrafish Using a {{CRISPR}}-{{Cas}} System},
   author = {Hwang, Woong Y. and Fu, Yanfang and Reyon, Deepak and Maeder, Morgan L. and Tsai, Shengdar Q. and Sander, Jeffry D. and Peterson, Randall T. and Yeh, J.-R. Joanna and Joung, J. Keith},
@@ -4604,6 +4641,25 @@
   langid = {english},
   number = {D1},
   pmcid = {PMC5753381}
+}
+
+@article{kallmanInvestigatingConePhotoreceptor2020,
+  title = {Investigating Cone Photoreceptor Development Using Patient-Derived {{NRL}} Null Retinal Organoids},
+  author = {Kallman, Alyssa and Capowski, Elizabeth E. and Wang, Jie and Kaushik, Aniruddha M. and Jansen, Alex D. and Edwards, Kimberly L. and Chen, Liben and Berlinicke, Cynthia A. and Joseph Phillips, M. and Pierce, Eric A. and Qian, Jiang and Wang, Tza-Huei and Gamm, David M. and Zack, Donald J.},
+  date = {2020-02-21},
+  journaltitle = {Communications Biology},
+  shortjournal = {Commun Biol},
+  volume = {3},
+  pages = {82},
+  issn = {2399-3642},
+  doi = {10.1038/s42003-020-0808-5},
+  abstract = {Photoreceptor loss is a leading cause of blindness, but mechanisms underlying photoreceptor degeneration are not well understood. Treatment strategies would benefit from improved understanding of gene-expression patterns directing photoreceptor development, as many genes are implicated in both development and degeneration. Neural retina leucine zipper (NRL) is critical for rod photoreceptor genesis and degeneration, with NRL mutations known to cause enhanced S-cone syndrome and retinitis pigmentosa. While murine Nrl loss has been characterized, studies of human NRL can identify important insights for human retinal development and disease. We utilized iPSC organoid models of retinal development to molecularly define developmental alterations in a human model of NRL loss. Consistent with the function of NRL in rod fate specification, human retinal organoids lacking NRL develop S-opsin dominant photoreceptor populations. We report generation of two distinct S-opsin expressing populations in NRL null retinal organoids and identify MEF2C as a candidate regulator of cone development.},
+  eprint = {32081919},
+  eprinttype = {pmid},
+  file = {/Users/mcgaugheyd/Zotero/storage/WRIPDK5N/Kallman et al. - 2020 - Investigating cone photoreceptor development using.pdf},
+  langid = {english},
+  number = {1},
+  pmcid = {PMC7035245}
 }
 
 @article{kaminskyDNAMethylationProfiles2009,
@@ -5078,6 +5134,25 @@
   number = {11}
 }
 
+@article{laboissonniereSingleCellTranscriptome2017,
+  title = {Single Cell Transcriptome Profiling of Developing Chick Retinal Cells},
+  author = {Laboissonniere, Lauren A. and Martin, Gregory M. and Goetz, Jillian J. and Bi, Ran and Pope, Brock and Weinand, Kallie and Ellson, Laura and Fru, Diane and Lee, Miranda and Wester, Andrea K. and Liu, Peng and Trimarchi, Jeffrey M.},
+  date = {2017},
+  journaltitle = {Journal of Comparative Neurology},
+  volume = {525},
+  pages = {2735--2781},
+  issn = {1096-9861},
+  doi = {10.1002/cne.24241},
+  url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/cne.24241},
+  urldate = {2021-02-08},
+  abstract = {The vertebrate retina is a specialized photosensitive tissue comprised of six neuronal and one glial cell types, each of which develops in prescribed proportions at overlapping timepoints from a common progenitor pool. While each of these cells has a specific function contributing to proper vision in the mature animal, their differential representation in the retina as well as the presence of distinctive cellular subtypes makes identifying the transcriptomic signatures that lead to each retinal cell's fate determination and development challenging. We have analyzed transcriptomes from individual cells isolated from the chick retina throughout retinogenesis. While we focused our efforts on the retinal ganglion cells, our transcriptomes of developing chick cells also contained representation from multiple retinal cell types, including photoreceptors and interneurons at different stages of development. Most interesting was the identification of transcriptomes from individual mixed lineage progenitor cells in the chick as these cells offer a window into the cell fate decision-making process. Taken together, these data sets will enable us to uncover the most critical genes acting in the steps of cell fate determination and early differentiation of various retinal cell types.},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/cne.24241},
+  file = {/Users/mcgaugheyd/Zotero/storage/PRHN57TG/Laboissonniere et al. - 2017 - Single cell transcriptome profiling of developing .pdf;/Users/mcgaugheyd/Zotero/storage/EJE3FHQV/cne.html},
+  keywords = {development,ganglion cells,retina,RRID: AB_514497,single cell transcriptomics},
+  langid = {english},
+  number = {12}
+}
+
 @article{lachmannMassiveMiningPublicly2018,
   title = {Massive Mining of Publicly Available {{RNA}}-Seq Data from Human and Mouse},
   author = {Lachmann, Alexander and Torre, Denis and Keenan, Alexandra B. and Jagodnik, Kathleen M. and Lee, Hoyjin J. and Wang, Lily and Silverstein, Moshe C. and Ma’ayan, Avi},
@@ -5399,6 +5474,24 @@
   file = {/Users/mcgaugheyd/Zotero/storage/R9CMX9GS/Li and Durbin - 2009 - Fast and accurate short read alignment with Burrow.pdf},
   number = {14},
   pmcid = {PMC2705234}
+}
+
+@article{linAssociationLEKR1CCNL1IGSF21KLHDC7A2016,
+  title = {Association between {{LEKR1}}-{{CCNL1}} and {{IGSF21}}-{{KLHDC7A}} Gene Polymorphisms and Diabetic Retinopathy of Type 2 Diabetes Mellitus in the {{Chinese Han}} Population},
+  author = {Lin, Xiaohui and Wang, Jihong and Yun, Lixia and Jiang, Shuhong and Li, Langen and Chen, Xiaohai and Li, Zhen and Lu, Qiang and Zhang, Yihui and Ma, Xiaocheng},
+  date = {2016-10},
+  journaltitle = {The Journal of Gene Medicine},
+  shortjournal = {J Gene Med},
+  volume = {18},
+  pages = {282--287},
+  issn = {1521-2254},
+  doi = {10.1002/jgm.2926},
+  abstract = {BACKGROUND: Diabetic retinopathy (DR) is one of the most common microvascular complications of diabetes. The present study aimed to identify a possible connection between gene polymorphisms and the risk of developing DR. MATERIALS AND METHODS: A total of 319 patients with type 2 diabetes mellitus (T2DM) were selected. All patients underwent a complete eye examination. Based on this, the patients with T2DM were divided into two subgroups: 175 patients with retinopathy (DR) and 144 patients without retinopathy (NDR). We calculated the genotype frequencies of case and control subjects using the chi-squares test. The odds ratio (OR) and 95\% confidence intervals (CIs) were calculated by unconditional logistic regression adjusted for age and sex. RESULTS: The finding by analysis is that the mean of duration of diabetes, total cholesterol (TC), triglycerides (TG), low-density lipoprotein (LDL), glomerular filtration rate and C-peptide were significantly different between DR and NDR. We found significant differences in cystatin-C concentrations with LEKR1-CCNL1 rs13064954 and NOS3 rs3918227 of different genotypes. Significant differences in serum TG levels were seen among the three genotypes of MTHFR rs1537516. Subjects carried the T allele of IGSF21-KLHDC7A rs3007729 had higher serum LDL concentrations (p~=~0.015). In the allele model, LEKR1-CCNL1 rs13064954 decreased the risk of DR (OR =0.57, 95\% CI~=~0.34-0.96, p~=~0.032). Under the dominant model, the IGSF21-KLHDC7A rs3007729 CT-TT genotype increased the risk of DR (OR =1.84, 95\% CI~=~1.14-2.99, p~=~0.013). CONCLUSIONS: Our results suggest that LEKR1-CCNL1 and IGSF21-KLHDC7A influence the development of DR.},
+  eprint = {27607899},
+  eprinttype = {pmid},
+  keywords = {Adult,Aged,Asian Continental Ancestry Group,Carrier Proteins,China,Cyclins,Diabetes Mellitus; Type 2,diabetic retinopathy,Diabetic Retinopathy,Female,Gene Frequency,Genetic Predisposition to Disease,Genotype,Humans,IGSF21-KLHDC7A,Lipids,Male,Membrane Proteins,Middle Aged,polymorphism LEKR1-CCNL1,Polymorphism; Single Nucleotide,Proteins,type 2 diabetes mellitus,Ubiquitin-Protein Ligases},
+  langid = {english},
+  number = {10}
 }
 
 @article{linBSeQCQualityControl2013,
@@ -6371,12 +6464,12 @@
   url = {http://arxiv.org/abs/1802.03426},
   urldate = {2020-12-21},
   abstract = {UMAP (Uniform Manifold Approximation and Projection) is a novel manifold learning technique for dimension reduction. UMAP is constructed from a theoretical framework based in Riemannian geometry and algebraic topology. The result is a practical scalable algorithm that applies to real world data. The UMAP algorithm is competitive with t-SNE for visualization quality, and arguably preserves more of the global structure with superior run time performance. Furthermore, UMAP has no computational restrictions on embedding dimension, making it viable as a general purpose dimension reduction technique for machine learning.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1802.03426},
   eprinttype = {arxiv},
   file = {/Users/mcgaugheyd/Zotero/storage/KKXDWCBY/McInnes et al. - 2020 - UMAP Uniform Manifold Approximation and Projectio.pdf;/Users/mcgaugheyd/Zotero/storage/TEFA9PRL/1802.html},
   keywords = {Computer Science - Computational Geometry,Computer Science - Machine Learning,Statistics - Machine Learning},
-  primaryClass = {cs, stat}
+  primaryclass = {cs, stat}
 }
 
 @article{mclarenEnsemblVariantEffect2016,
@@ -9526,6 +9619,27 @@
   options = {useprefix=true}
 }
 
+@article{swamyEyeDiskEyeIntegration2019,
+  title = {Eye in a {{Disk}}: {{eyeIntegration Human Pan}}-{{Eye}} and {{Body Transcriptome Database Version}} 1.0},
+  shorttitle = {Eye in a {{Disk}}},
+  author = {Swamy, Vinay and McGaughey, David},
+  date = {2019-07-01},
+  journaltitle = {Investigative Ophthalmology \& Visual Science},
+  shortjournal = {Invest Ophthalmol Vis Sci},
+  volume = {60},
+  pages = {3236--3246},
+  issn = {1552-5783},
+  doi = {10.1167/iovs.19-27106},
+  abstract = {Purpose: We develop an accessible and reliable RNA sequencing (RNA-seq) transcriptome database of healthy human eye tissues and a matching reactive web application to query gene expression in eye and body tissues. Methods: We downloaded the raw sequence data for 1375 RNA-seq samples across 54 tissues in the Genotype-Tissue Expression (GTEx) project as a noneye reference set. We then queried several public repositories to find all healthy, nonperturbed, human eye-related tissue RNA-seq samples. The 916 eye and 1375 GTEx samples were sent into a Snakemake-based reproducible pipeline we wrote to quantify all known transcripts and genes, removes samples with poor sequence quality and mislabels, normalizes expression values across each tissue, perform 882 differential expression tests, calculate GO term enrichment, and output all as a single SQLite database file: the Eye in a Disk (EiaD) dataset. Furthermore, we rewrote the web application eyeIntegration (available in the public domain at https://eyeIntegration.nei.nih.gov) to display EiaD. Results: The new eyeIntegration portal provides quick visualization of human eye-related transcriptomes published to date by database version, gene/transcript, 19 eye tissues, and 54 body tissues. As a test of the value of this unified pan-eye dataset, we showed that fetal and organoid retina are highly similar at a pan-transcriptome level, but display distinct differences in certain pathways and gene families, such as protocadherin and HOXB family members. Conclusions: The eyeIntegration v1.0 web app serves the pan-human eye and body transcriptome dataset, EiaD. This offers the eye community a powerful and quick means to test hypotheses on human gene and transcript expression across 54 body and 19 eye tissues.},
+  eprint = {31343654},
+  eprinttype = {pmid},
+  file = {/Users/mcgaugheyd/Zotero/storage/72FJX9M3/Swamy and McGaughey - 2019 - Eye in a Disk eyeIntegration Human Pan-Eye and Bo.pdf},
+  keywords = {Databases; Factual,Eye Proteins,Gene Expression Profiling,Humans,Retina,RNA; Messenger,Sequence Analysis; RNA,Transcriptome},
+  langid = {english},
+  number = {8},
+  pmcid = {PMC6660187}
+}
+
 @article{swaroopTranscriptionalRegulationPhotoreceptor2010,
   title = {Transcriptional Regulation of Photoreceptor Development and Homeostasis in the Mammalian Retina},
   author = {Swaroop, Anand and Kim, Douglas and Forrest, Douglas},
@@ -9704,7 +9818,7 @@
   url = {http://arxiv.org/abs/1810.08473},
   urldate = {2020-12-21},
   abstract = {Community detection is often used to understand the structure of large and complex networks. One of the most popular algorithms for uncovering community structure is the so-called Louvain algorithm. We show that this algorithm has a major defect that largely went unnoticed until now: the Louvain algorithm may yield arbitrarily badly connected communities. In the worst case, communities may even be disconnected, especially when running the algorithm iteratively. In our experimental analysis, we observe that up to 25\% of the communities are badly connected and up to 16\% are disconnected. To address this problem, we introduce the Leiden algorithm. We prove that the Leiden algorithm yields communities that are guaranteed to be connected. In addition, we prove that, when the Leiden algorithm is applied iteratively, it converges to a partition in which all subsets of all communities are locally optimally assigned. Furthermore, by relying on a fast local move approach, the Leiden algorithm runs faster than the Louvain algorithm. We demonstrate the performance of the Leiden algorithm for several benchmark and real-world networks. We find that the Leiden algorithm is faster than the Louvain algorithm and uncovers better partitions, in addition to providing explicit guarantees.},
-  archivePrefix = {arXiv},
+  archiveprefix = {arXiv},
   eprint = {1810.08473},
   eprinttype = {arxiv},
   file = {/Users/mcgaugheyd/Zotero/storage/MECZDU7R/Traag et al. - 2019 - From Louvain to Leiden guaranteeing well-connecte.pdf;/Users/mcgaugheyd/Zotero/storage/TPG246I8/1810.html},
